--- a/webapi/CalendarInvitation.WebApi.csproj
+++ b/webapi/CalendarInvitation.WebApi.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CalendarInvitation.Auth\CalendarInvitation.Auth.csproj" />
+  </ItemGroup>
+
 </Project>
