--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "this is my custom Secret key for authentication"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
