Restructured Event Service folders to remove redundant nesting. - Added base entity class and event entities - Events, EventNotification, EventInvitation to domain project. - Added EventsContext and seed data class to Infrastructure project - Ran initial migration on Infrastructure project to create db schema snapshot - Configured EventService.Api project for infrastructure related services

--- a/src/Web/CalendarInvitation.Api/CalendarInvitation.Api.csproj
+++ b/src/Web/CalendarInvitation.Api/CalendarInvitation.Api.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Services\Auth\CalendarInvitation.Auth\CalendarInvitation.Auth.csproj" />
+    <ProjectReference Include="..\..\Services\Auth\CalendarInvitation.Auth.csproj" />
   </ItemGroup>
 
 </Project>
