Made a bunch of changes to reflecting Auth0 configurations. - Changed created by and modified by fields to be string - Modified controller methods - Added authentication and authorization to the event API - Added required auth attributes to event controller - left a bunch of TODOs for validations

--- a/src/Services/EventService/EventService.Api/appsettings.json
+++ b/src/Services/EventService/EventService.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   // TODO CHANGE THIS TO LOCAL DB SETTING
   "ConnectionStrings": {
-    "EventConnectionString": "Server=localhost;Database=EventDb;User Id=sa;Password=Karan12345678;TrustServerCertificate=True"
+    "EventConnectionString": "Server=localhost;Database=CalendarInvitationEvents;User Id=sa;Password=Karan12345678;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
