--- a/src/Web/calendarinvitation.web/package.json
+++ b/src/Web/calendarinvitation.web/package.json
@@ -33,6 +33,7 @@
     "npm-run-all": "^4.1",
     "postcss": "^8.4",
     "react": "^18",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "^18",
     "react-router-dom": "^5.3",
     "react-scripts": "^5.0",
