--- a/src/Web/calendarinvitation.web/package.json
+++ b/src/Web/calendarinvitation.web/package.json
@@ -23,10 +23,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2",
     "@fortawesome/free-solid-svg-icons": "^5.8",
     "@fortawesome/react-fontawesome": "^0.2",
+    "@wojtekmaj/react-datetimerange-picker": "^5.4.2",
     "autoprefixer": "^10.4",
     "cors": "^2.8",
     "express": "^4.18",
     "express-oauth2-jwt-bearer": "^1.5.0",
+    "formik": "^2.4.2",
     "helmet": "^4.4",
     "highlight.js": "^10.0",
     "morgan": "^1.9",
