--- a/src/Web/calendarinvitation.web/package.json
+++ b/src/Web/calendarinvitation.web/package.json
@@ -23,16 +23,19 @@
     "@fortawesome/fontawesome-svg-core": "^1.2",
     "@fortawesome/free-solid-svg-icons": "^5.8",
     "@fortawesome/react-fontawesome": "^0.2",
+    "@wojtekmaj/react-datetimerange-picker": "^5.4.2",
     "autoprefixer": "^10.4",
     "cors": "^2.8",
     "express": "^4.18",
     "express-oauth2-jwt-bearer": "^1.5.0",
+    "formik": "^2.4.2",
     "helmet": "^4.4",
     "highlight.js": "^10.0",
     "morgan": "^1.9",
     "npm-run-all": "^4.1",
     "postcss": "^8.4",
     "react": "^18",
+    "react-big-calendar": "^1.8.1",
     "react-dom": "^18",
     "react-router-dom": "^5.3",
     "react-scripts": "^5.0",
