Added event bus flow to send new notifcation messages to Kafka. - Added kafka-docker-compose.yml to run docker containers required for event bus - Added Notification Service project with consumer class for events produced by Event service - Added producer service class in Event Service to send out notification regarding new events in calendar to required invitees - Added a EventBus message project with required constants and mesages for event exchange between services - removed redundant projects

--- a/src/Services/EventService/EventService.Api/appsettings.json
+++ b/src/Services/EventService/EventService.Api/appsettings.json
@@ -3,6 +3,11 @@
   "ConnectionStrings": {
     "EventConnectionString": "Server=localhost;Database=CalendarInvitationEvents;User Id=sa;Password=Karan12345678;TrustServerCertificate=True"
   },
+  "Kafka": {
+    "ProducerSettings": {
+      "Server": "localhost:9092"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
