--- a/src/Services/EventService/EventService.Infrastructure/EventService.Infrastructure.csproj
+++ b/src/Services/EventService/EventService.Infrastructure/EventService.Infrastructure.csproj
@@ -7,10 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\EventBus\EventBus.Message\EventBus.Message.csproj" />
     <ProjectReference Include="..\EventService.Application\EventService.Application.csproj" />
   </ItemGroup>
 
