Added redis cache to store recent events in cache for faster response times. - Added redis distributed cache to event service CRUD methods - Modified UI logic to match the API request structure - Removed redundant code

--- a/src/Services/EventService/EventService.Api/appsettings.json
+++ b/src/Services/EventService/EventService.Api/appsettings.json
@@ -3,6 +3,9 @@
   "ConnectionStrings": {
     "EventConnectionString": "Server=localhost;Database=CalendarInvitationEvents;User Id=sa;Password=Karan12345678;TrustServerCertificate=True"
   },
+  "CacheSettings": {
+    "ConnectionString": "localhost:6379"
+  },
   "Kafka": {
     "ProducerSettings": {
       "Server": "localhost:9092"
