Fixed configuration issues across API and UI - removed magic strings, numbers and any settings and moved them to a proper config file - added proper models to get settings from config file - fixed config issue for UI app relating to getting server URLs from config

--- a/src/Services/EventService/EventService.Api/appsettings.json
+++ b/src/Services/EventService/EventService.Api/appsettings.json
@@ -1,10 +1,16 @@
 {
-  // TODO CHANGE THIS TO LOCAL DB SETTING
+  "Auth": {
+    "Authority": "https://dev-xbyetq2ijrz8v4i0.us.auth0.com/",
+    "Audience": "https://calendar-invitation-api/"
+  },
+  "Redis": {
+    "CacheExpiryInMinutes": 1440,
+    "ConnectionString": "localhost:6379",
+    "ConnectionTimeoutInMilliseconds": 10000,
+    "MaxRetryCount":  3
+  },
   "ConnectionStrings": {
     "EventConnectionString": "Server=localhost;Database=CalendarInvitationEvents;User Id=sa;Password=Karan12345678;TrustServerCertificate=True"
-  },
-  "CacheSettings": {
-    "ConnectionString": "localhost:6379"
   },
   "Kafka": {
     "ProducerSettings": {
@@ -17,5 +23,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "localhost"
 }
