Added unit tests for code coverage - Made a few minor updates to code like moving common code to a utility class, moving commonly used string messages to a constant class and more - Modified the Date utility class to set the DateTime kind property to allow conversions from unknown source - Added test cases for all CRUD queries and commands to test basic scenarios/units - Fixed a few obviously visible logical errors

--- a/src/Services/EventService/EventService.Application/EventService.Application.csproj
+++ b/src/Services/EventService/EventService.Application/EventService.Application.csproj
@@ -24,4 +24,10 @@
     <ProjectReference Include="..\EventService.Domain\EventService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>EventService.Application.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
