--- a/src/Services/EventService/EventService.Application/EventService.Application.csproj
+++ b/src/Services/EventService/EventService.Application/EventService.Application.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Features\Events\Commands\CreateEvent\CreateEventCommandHandler.cs~RF43aadf4.TMP" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
@@ -26,6 +22,12 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\EventBus\EventBus.Message\EventBus.Message.csproj" />
     <ProjectReference Include="..\EventService.Domain\EventService.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>EventService.Application.Tests</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
